--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "ember-data": "~2.14.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-pouch": "^4.2.8",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.0",
-    "ember-welcome-page": "^3.0.0",
     "loader.js": "^4.2.3"
   },
   "engines": {
